--- a/yataverse/src/main/resources/application.properties
+++ b/yataverse/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mysql://localhost:3306/yataverse?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=hrhr
+
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database=mysql
+spring.jpa.show-sql=true
+
+spring.profiles.include=oauth
