--- a/yataverse/build.gradle
+++ b/yataverse/build.gradle
@@ -5,14 +5,16 @@ plugins {
 }
 
 group = 'com.blog'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.3-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
 sourceCompatibility = '1.8'
+apply plugin:'war'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -30,6 +32,9 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 }
 
+bootWar {
+	archiveName("yata.war")
+}
 test {
 	useJUnitPlatform()
 }
