--- a/yataverse/src/main/resources/application.properties
+++ b/yataverse/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/yataverse?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=admin
+spring.datasource.username=root
 spring.datasource.password=hrhrhrhr
 
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
