--- a/yataverse/src/main/resources/application.properties
+++ b/yataverse/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/yataverse?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://yataverse.cyyakbfboamu.ap-northeast-2.rds.amazonaws.com:3306/yataverse?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=hrhrhrhr
 
